# fire-hpp

./: .gitignore  CMakeLists.txt  LICENCE  README.md  conanfile.py  fire.h  fire.hpp  main.cpp  run_examples.py  tests.cpp
.github/workflows/: cmake.yml
docs/: algorithm.md  cmake.md  conan.md  development.md
examples/: CMakeLists.txt  LICENCE  README.md  add.cpp  all_combinations.cpp  all_positional.cpp  basic.cpp  conditions.cpp  constraints.cpp  flag.cpp  flags.cpp  no_exceptions.cpp  optional_and_default.cpp  positional.cpp  post_call.cpp  raw_args.cpp  variadic.cpp  vector_positional.cpp
include/fire/: fire.hpp
include/fire-hpp/: fire.hpp
tests/: CMakeLists.txt  create_build_dirs_txt.cmake  link_func.cpp  link_main.cpp  run_all_tests.py  run_examples.py  run_release_tests.py  run_standard_tests.py  tests.cpp
